Fix issues with design on mobiles
FossilOrigin-Name: d8ac035450a44701f55abb02b4edaf7f5ad6bff4

--- a/web/content.css
+++ b/web/content.css
@@ -114,9 +114,14 @@
     text-align: center;
 }
 
-.web-content table th {
-    background: #eee;
+.web-content table thead {
+    background: #ddd;
     font-weight: bold;
+    border-bottom: 5px solid #999;
+}
+
+.web-content table tbody tr:nth-child(even) {
+    background: #eee;
 }
 
 .web-content mark {
